# Qt-SmartHome

./: .gitignore  README.md
SmartHome-Client/: CMakeLists.txt  Resource.qrc  main.cpp
SmartHome-Client/Client-Core/: CMakeLists.txt  EventBus.cpp  EventBus.h
SmartHome-Client/Client-Core/Client_MessageHandle/: Client_LoginHandle.cpp  Client_LoginHandle.h  Client_UserHandle.cpp  Client_UserHandle.h
SmartHome-Client/Client-DataCenter/: CMakeLists.txt  LoginUserManager.cpp  TokenManager.cpp  TokenManager.h
SmartHome-Client/Client-DataCenter/LoginUserDataMoudle/: LoginUserManager.cpp  LoginUserManager.h
SmartHome-Client/Client-DataCenter/TokenManager/: TokenManager.cpp  TokenManager.h
SmartHome-Client/Client-NetWork/: CMakeLists.txt  ExternalHttpClient.cpp  ExternalHttpClient.h  HttpClient.cpp  HttpClient.h  HttpClientPort.h  MessageHandle.cpp  MessageHandle.h  MqttClient.cpp  MqttClient.h  NetWorkService.cpp  NetWorkService.h  WebClient.cpp  WebClient.h  WebClientPort.h
SmartHome-Client/Client-UI/: CMakeLists.txt  MainWindow.cpp
SmartHome-Client/Client-UI/LoginWidget/: LoginWidget.cpp  LoginWidget.h  PassWordChangePage.cpp  PassWordChangePage.h  PassWordChangePage.ui  RegisterPage.cpp  RegisterPage.h  RegisterPage.ui
SmartHome-Client/Client-UI/MainWidget/: MainWidget.cpp  MainWidget.h  MainWidget.ui
SmartHome-Client/Client-UI/MainWidget/CustomCard/WeatherWidget/: WeatherWidget.cpp
SmartHome-Client/Client-UI/MainWidget/CustomCard/deviceControlCard/: deviceContralCard.cpp  deviceContralCard.h  deviceContralCard.ui
SmartHome-Client/Client-UI/MainWidget/DevicePage/: DevicePage.cpp  DevicePage.h  DevicePage.ui
SmartHome-Client/Client-UI/MainWidget/HoomPage/: HoomPage.cpp  HoomPage.h  HoomPage.ui
SmartHome-Client/Client-UI/MainWidget/HoomPage/WeatherWidget/: WeatherWidget.cpp  WeatherWidget.h  weatherWidget.ui
SmartHome-Client/Client-UI/MainWidget/RoomPage/: RoomPage.cpp
SmartHome-Client/Client-Util/: CMakeLists.txt  EventBus.cpp  EventBus.h  ImageUtil.cpp  ImageUtil.h  SMaskWidget.cpp  SMaskWidget.h
SmartHome-Client/Resource/StyleSheet/: HoomPage.css  LoginWidget.css  MainWidget.css  PasswordChangePage.css  RegisterPage.css  WeatherWidget.css
SmartHome-HardWare/: .mxproject  smartHome.ioc
SmartHome-HardWare/Core/Inc/: main.h  stm32f1xx_it.h
SmartHome-HardWare/Core/Src/: adc.c  gpio.c  iwdg.c  main.c  stm32f1xx_it.c  tim.c  usart.c
SmartHome-HardWare/MDK-ARM/: smartHome.uvoptx  smartHome.uvprojx
SmartHome-HardWare/MyCode/delay/: delay.c
SmartHome-HardWare/MyCode/esp8266/: esp8266.c  esp8266.h
SmartHome-HardWare/MyCode/key/: key.c  key.h
SmartHome-HardWare/MyCode/led/: led.c  led.h
SmartHome-HardWare/MyCode/myAdc/: myAdc.c  myAdc.h
SmartHome-HardWare/MyCode/myTimer/: myTimer.c  myTimer.h
SmartHome-HardWare/MyCode/myUsart/: myUsart.c  myUsart.h  uart.c  uart.h
SmartHome-HardWare/MyCode/oled/: oled.c  oled.h  oled_font.h
SmartHome-HardWare/MyCode/util/: cmdMap.c  cmdMap.h  mqttPacket.c  mqttPacket.h
SmartHome-Qt/: CMakeLists.txt
SmartHome-Qt/SmartHome-Client/: CMakeLists.txt  Resource.qrc  main.cpp
SmartHome-Qt/SmartHome-Client/Client-Core/: CMakeLists.txt  EventBus.h  SersorDataHandle.cpp  SersorDataHandle.h
SmartHome-Qt/SmartHome-Client/Client-DataCenter/: LoginUserManager.cpp  LoginUserManager.h
SmartHome-Qt/SmartHome-Client/Client-NetWork/: CMakeLists.txt  ExternalHttpClient.cpp  ExternalHttpClient.h  HttpClient.cpp  HttpClient.h  MessageHandle.cpp  MessageHandle.h  MqttClient.cpp  MqttClient.h  NetWorkService.cpp  NetWorkService.h
SmartHome-Qt/SmartHome-Client/Client-ServiceLocator/: NetWorkServiceLocator.h
SmartHome-Qt/SmartHome-Client/Client-UI/: MainWindow.cpp  MainWindow.h
SmartHome-Qt/SmartHome-Client/Client-UI/Client-ServiceLocator/: NetWorkServiceLocator.cpp
SmartHome-Qt/SmartHome-Client/Client-UI/LoginWidget/: LoginWidget.cpp  LoginWidget.ui  PassWordChangePage.h  PassWordChangePage.ui  RegisterPage.cpp
SmartHome-Qt/SmartHome-Client/Client-UI/MainWidget/: MainWidget.h  MainWidget.ui
SmartHome-Qt/SmartHome-Client/Client-UI/MainWidget/CustomCard/: CMakeLists.txt
SmartHome-Qt/SmartHome-Client/Client-Util/: AngleRoundedWidget.cpp  AngleRoundedWidget.h  CMakeLists.txt  EventBus.h  ImageUtil.cpp  PacketCreate.cpp  PacketCreate.h  SConfigFile.cpp  SConfigFile.h
SmartHome-Qt/SmartHome-Client/Client-Util/MaskBackgroundWidget/: MaskBackgroundWidget.cpp  MaskBackgroundWidget.h
SmartHome-Qt/SmartHome-Client/Client-Util/myMessageBox/: myMessageBox.cpp  myMessageBox.css  myMessageBox.h
SmartHome-Qt/SmartHome-Client/Resource/StyleSheet/: HoomPage.css  MainWidget.css
SmartHome-Qt/SmartHome-Server/: main.cpp
SmartHome-Qt/SmartHome-Server/Server-Core/: MessageHandle.cpp
SmartHome-Qt/SmartHome-Server/Server-Core/Server-DBUtils/: LoginDBUtils.h  UserDBUtils.cpp  UserDBUtils.h
SmartHome-Qt/SmartHome-Server/Server-Core/Server-MessageHandle/: LoginHandle.cpp  LoginHandle.h  UserHandle.cpp  UserHandle.h
SmartHome-Qt/SmartHome-Server/Server-DataBase/: CMakeLists.txt  DataBaseQuery.cpp
SmartHome-Qt/SmartHome-Server/Server-NetWork/: CMakeLists.txt  HttpRouteManager.cpp  HttpRouteManager.h  Server.h
SmartHome-Qt/SmartHome-Server/Server-Util/: CMakeLists.txt  CreateId.cpp  PacketCreate.cpp  SResultCode.h
SmartHome-Server/: CMakeLists.txt
SmartHome-Server/Server-Core/: CMakeLists.txt  MessageHandle.cpp  MessageHandle.h
SmartHome-Server/Server-Core/Server-DBUtils/: LoginDBUtils.cpp  UserDBUtils.cpp  UserDBUtils.h
SmartHome-Server/Server-Core/Server-MessageHandle/: LoginHandle.cpp  LoginHandle.h  RegisterHandle.cpp  RegisterHandle.h  UserHandle.cpp  UserHandle.h
SmartHome-Server/Server-DataBase/: DataBaseQuery.h  SSqlConnectionPool.cpp  SSqlConnectionPool.h
SmartHome-Server/Server-NetWork/: CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  HttpRouteManager.cpp  HttpRouteManager.h  Server.cpp  Server.h
SmartHome-Server/Server-Util/: CMakeLists.txt  CreateId.h  GlobalTypes.h  ImageUtil.cpp  ImageUtil.h  PacketCreate.cpp  PacketCreate.h  SResultCode.h
(+20 files in other folders)
